added filter menu and more features

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@
   --primary-bg: #272B33;
   --primary-color: #FBC02D;
   --secondary-color: #FD5115;
+  --third-color: #FE1E33;
   --card-color: #3C3E44;
+  
 }
 
 body {
